added separating unit and integrated tests