@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.4.10'
+    id 'org.unbroken-dome.test-sets' version '2.1.1'
     id 'application'
 }
 
@@ -23,11 +24,25 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-tasks.withType(Test) {
-    useJUnitPlatform()
-    jvmArgs '--enable-preview'
-}
-
 sourceSets {
     main.java.srcDirs = ['src/']
+}
+
+testSets {
+    integrationTest { dirName = 'integration-test' }
+}
+
+check.dependsOn integrationTest
+integrationTest.mustRunAfter test
+
+integrationTest {
+    useJUnitPlatform {
+        includeTags 'integrationTest'
+    }
+}
+
+test {
+    useJUnitPlatform {
+        includeTags 'unitTest'
+    }
 }
